# qt-dcc-spinbox

./: .gitignore  LICENSE  claude.md  pyproject.toml  readme.md
.github/workflows/: python-publish.yml
examples/: demo.py
qt_dcc_spinbox/: __init__.py  _qt.py  spinbox.py  stepper.py  utils.py
scripts/: test.bat
tests/: __init__.py  test_spinbox.py
